[gd_scene load_steps=5 format=3 uid="uid://d48cbl7dma6y"]

[ext_resource type="Texture2D" uid="uid://cl0y7xiui7i6o" path="res://IconCash.png" id="1_fbi7y"]
[ext_resource type="Script" uid="uid://c1lemx81dpub8" path="res://Scripts/buissnes_panel.gd" id="1_k4vwq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k4vwq"]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="LabelSettings" id="LabelSettings_k4vwq"]

[node name="BuissnesPanel" type="Control"]
custom_minimum_size = Vector2(400, 125)
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_k4vwq")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(400, 125)
layout_mode = 0
offset_right = 400.0
offset_bottom = 125.0

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(400, 125)
layout_mode = 1
offset_right = 400.0
offset_bottom = 125.0
theme_override_styles/panel = SubResource("StyleBoxFlat_k4vwq")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("1_fbi7y")

[node name="Ilosc" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "100"
label_settings = SubResource("LabelSettings_k4vwq")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CashButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
text = "100$"

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BuyButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "BUY x 1"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/CashButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/BuyButton" to="." method="_on_buy_button_pressed"]
